--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <div class="member-content">
                     <h2 class="member-name">陳軒翊</h2>
                     <p class="member-role"></p>
-                    <p class="member-description"></p>
+                    <p class="member-description">我會旋風大奶牛</p>
                 </div>
             </div>
             <div class="member">
@@ -183,7 +183,7 @@
                 <div class="member-content">
                     <h2 class="member-name">田玟暄</h2>
                     <p class="member-role"></p>
-                    <p class="member-description"></p>
+                    <p class="member-description">幹你娘陳宏偉</p>
                 </div>
             </div>
             <div class="member">
