--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <div class="member-content">
                     <h2 class="member-name">陳軒翊</h2>
                     <p class="member-role"></p>
-                    <p class="member-description">啊那你在供三小巴西鏈鋸人的火焰大老二大報社</p>
+                    <p class="member-description">啊為什麼我是阿夸</p>
                 </div>
             </div>
             <div class="member">
